--- a/sistemaManutencao/Dockerfile
+++ b/sistemaManutencao/Dockerfile
@@ -1,5 +1,6 @@
-# Etapa 1: Build da aplicação
-FROM eclipse-temurin:21-jdk AS build
+# Etapa 1: Build da aplicação com Amazon Corretto
+# <--- MUDANÇA AQUI: Usando uma imagem base que não tem limite de download
+FROM public.ecr.aws/amazoncorretto/amazoncorretto:21 AS build
 
 # Define diretório de trabalho dentro do container
 WORKDIR /app
@@ -14,7 +15,8 @@ RUN chmod +x mvnw
 RUN ./mvnw clean package -DskipTests
 
 # Etapa 2: Imagem final para rodar a aplicação
-FROM public.ecr.aws/eclipse-temurin/jdk:21
+# <--- MUDANÇA AQUI: Usando a mesma imagem base, garantindo consistência e corrigindo o erro "not found"
+FROM public.ecr.aws/amazoncorretto/amazoncorretto:21
 
 WORKDIR /app
 
